##Text encoding: utf-8

2008-11-08  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gccv/structs.h: add Point struct.
	* libs/gcp/view.cc: fixed objects remove.
	* plugins/paint/bonds/bondtool.cc: removed unused local variables.
	* plugins/paint/bonds/bondtool.h: remove a wrong declaration.
	* plugins/paint/bonds/chaintool.cc: reimplemented, and fixed undo
	and unallowed operations issues.
	* plugins/paint/bonds/chaintool.h: added gcpChainTool::Draw() method.

2008-11-07  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gccv/item-client.h: enhance client retreival.
	* libs/gccv/item.cc: fixed a potential crasher/leak.
	* libs/gcp/view.cc: added View::SetSelectionState().
	* libs/gcp/view.h: ditto.
	* libs/gcp/widgetdata.cc: reimplemnted selection and object bounds.
	* plugins/paint/bonds/bondtool.cc: cleaned BondTool::OnDrag() and
	BondTool::OnRelease().
	* plugins/paint/selection/selectiontool.cc: mostly reimplemented to
	use the new canvas.

2008-11-06  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gccv/canvas.cc: add Canvas::GetItemAt.
	* libs/gccv/canvas.h: ditto.
	* libs/gccv/item-client.cc: delete the item when destroyed.
	* libs/gccv/item-client.h: add Item as friend class.
	* libs/gccv/item.cc: unregister from client when deleted.
	* libs/gcp/view.cc: reimplement View::Remove
	* plugins/paint/selection/erasertool.cc: reimplemented.

2008-11-05  Jean Bréfort  <jean.brefort@normalesup.org>
	* docs/reference/Doxyfile.in: add libs/gccv directory.
	* libs/gccv/Makefile.am: add wedge.*.
	* libs/gccv/canvas.cc: made event methods really private.
	* libs/gccv/canvas.h: ditto, and added API documentation.
	* libs/gccv/text.h: initial API documentation.
	* libs/gccv/wedge.cc: new item for "wedge" bonds.
	* libs/gccv/wedge.h: ditto.
	* libs/gcp/bond.cc: reimplement "wedge" bonds.
	* libs/gcp/bond.h: fixed API documentation.
	* libs/gcp/molecule.h: ditto.
	* libs/gcp/view.h: ditto.
	* libs/gcu/chemistry.h: added gccv namespace to API documentation.