@@ -149,6 +149,14 @@ bool gcpBondTool::OnClicked ()
 		}
 	}
 	if (m_pAtom) {
+		if (m_pObject) {
+			Object *group = m_pObject->GetMolecule ()->GetParent ();
+			if (group != pDoc) {
+				Object *other = m_pAtom->GetMolecule ()->GetParent ();
+				if (other != pDoc && group != other)
+					return true;
+			}
+		}
 		m_pAtom->GetCoords(&m_x1, &m_y1, NULL);
 		m_x1 *= m_dZoomFactor;
 		m_y1 *= m_dZoomFactor;
@@ -213,6 +221,14 @@ void gcpBondTool::OnDrag ()
 				m_pAtom = (gcp::Atom*) pObject;
 		}
 		if (m_pAtom) {
+			if (m_pObject) {
+				Object *group = m_pObject->GetMolecule ()->GetParent ();
+				if (group != pDoc) {
+					Object *other = m_pAtom->GetMolecule ()->GetParent ();
+					if (other != pDoc && group != other)
+						return;
+				}
+			}
 			if ((Object*) m_pAtom == m_pObject)
 				return;
 			if (!m_pAtom->AcceptNewBonds ())
